--- a/bio.html
+++ b/bio.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -155,7 +154,7 @@
   <!-- Navigation Bar -->
   <nav class="navbar">
     <div class="logo">
-      <a href="Home Page.html" accesskey="1" tabindex="1"> ๋࣭ ⭑────୨ৎ────⭑๋࣭  SYIQIN'S SCENE ๋࣭ ⭑────୨ৎ────⭑๋࣭  </a>
+      <a href="index.html" accesskey="1" tabindex="1"> ๋࣭ ⭑────୨ৎ────⭑๋࣭  SYIQIN'S SCENE ๋࣭ ⭑────୨ৎ────⭑๋࣭  </a>
     </div>
     <ul>
       <li><a href="bio.html" accesskey="2" tabindex="2">BIODATA</a></li>
@@ -200,9 +199,9 @@
               <li>University: Information Management <abbr title="Universiti Teknologi MARA">UiTM</abbr>, Rembau Campus </li><br>
               </ul>
       </p>
-          <a href="images/DSC_5969.JPG"> </a>
+          <a href="images/DSC_5969.JPG"> 
           <img src="images/DSC_5969.JPG" height="200" style="border-radius: 30px; border: 3px solid #108310; transition: transform 0.3s ease;" hspace="10" vspace="10">
-        
+        </a>
     </div>
 
     <div class="item3">
@@ -216,8 +215,9 @@
           <li>Drink: <i>Chrysanthemum Tea</i></li><br>
         </ul>
       </p>
-      <a href="images/Ayam Gepuk.jpg"></a>
+      <a href="images/Ayam Gepuk.jpg">
       <img src="images/Ayam Gepuk.jpg" height="200" style="border-radius: 30px; border: 3px solid #108310; transition: transform 0.3s ease;" hspace="10" vspace="10">
+      </a>
     </div>
 
     <div class="item4">
