--- a/bio.html
+++ b/bio.html
@@ -7,11 +7,11 @@
 
     /* Navigation Bar */
     .navbar {
-      background-color: #597a26; /* Muted Green */
+      background-color: #597a26; 
       padding: 15px 20px;
       font-family:Helvetica;
       text-align: left;
-      border-bottom: 3px solid #E8AA14; /* Golden Accent */
+      border-bottom: 3px solid #E8AA14; 
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -20,13 +20,13 @@
     .navbar .logo a {
       font-size: 30px;
       font-weight: bold;
-      color: #F8EDD9; /* Creamy white */
+      color: #F8EDD9; 
       text-decoration: none;
       transition: color 0.3s ease;
     }
 
     .navbar .logo a:hover {
-      color: #E8AA14; /* Golden Yellow */
+      color: #E8AA14; 
     }
 
     .navbar ul {
@@ -42,13 +42,13 @@
 
     .navbar li a {
       font-size: 18px;
-      color: #F8EDD9; /* Creamy white */
+      color: #F8EDD9; 
       text-decoration: none;
       transition: color 0.3s ease;
     }
 
     .navbar li a:hover {
-      color: #E8AA14; /* Golden Yellow */
+      color: #E8AA14; 
     }
 
     body {
@@ -156,24 +156,24 @@
 
     /* Footer */
     .footer {
-      background-color: #597a26; /* Muted Green */
-      color: #F8EDD9; /* Creamy White */
+      background-color: #597a26; 
+      color: #F8EDD9; 
       text-align: center;
       font-family:Helvetica;
-      border-top: 3px solid #E8AA14; /* Golden Accent */
-      width: 100%; /* Ensures the footer spans the full screen */
-      margin: 0; /* Removes any default margins */
-      padding: 10px 0; /* Adds vertical spacing for content */
-      box-sizing: border-box; /* Includes padding and border in the width calculation */
+      border-top: 3px solid #E8AA14; 
+      width: 100%; 
+      margin: 0; 
+      padding: 10px 0; 
+      box-sizing: border-box; 
     }
 
     .footer a {
-      color: #F8EDD9; /* Creamy white */
+      color: #F8EDD9; 
       text-decoration: none;
     }
 
     .footer a:hover {
-      color: #E8AA14; /* Golden Yellow */
+      color: #E8AA14; 
     }
 
     .date-time {
@@ -318,26 +318,19 @@
 
   <footer class="footer">
     <div>
-        <a href="mailto:nasyiqin06@gmail.com" accesskey="7" tabindex="7">
-            <img src="images/gmail.png" width="50px" height="50px" alt="Email"> 
-        </a>
-        <a href="https://www.instagram.com/cffeoasy" accesskey="8" tabindex="8">
-            <img src="images/instagram_resize_real.png" width="50px" height="50px" alt="Instagram"> 
-        </a>
-        <a href="https://x.com/CFFEOASY" accesskey="9" tabindex="9">
-            <img src="images/twitter.png" width="50px" height="50px" alt="Twitter">
-        </a>
+      <a href="mailto:nasyiqin06@gmail.com" tabindex="8">
+        <img src="images/gmail.png" width="50" height="50" alt="Email">
+      </a>
+      <a href="https://www.instagram.com/cffeoasy"  tabindex="9">
+        <img src="images/instagram_resize_real.png" width="50" height="50" alt="Instagram">
+      </a>
+      <a href="https://x.com/CFFEOASY"  tabindex="10">
+        <img src="images/twitter.png" width="50" height="50" alt="Twitter">
+      </a>
     </div>
+    <p class="access-keys">Access Key Shortcuts (Alt+N): 1 - Home | 2 - Biodata | 3 - Education | 4 - Experience | 5 - Family | 6 - Friends | 7 - Gallery | </p>
 
-    <br> 
-
-    <div class="access-keys">
-        <p>Access Key Shortcuts:</p>
-        <p>1 - SYIQIN'S SCENE | 2 - BIODATA | 3 - EDUCATION | 4 - FAMILY | 5 - INTEREST | 6 - BUCKET LIST</p>
-        <p>7 - Email | 8 - Instagram | 9 - Twitter</p>
-    </div>
-
-    <p><a href="#top" accesskey="T" tabindex="10">Back to Top</a></p>
+    <p><a href="#top" tabindex="11">Back to Top</a></p>
 
     <p>© 2024 SYIQIN'S SCENE</p>
 
